# watchdogs

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
models/: rtdetr.txt  yolon.txt
notebooks/: Clean_workplace.ipynb
src/: __init__.py
src/camera_api/: camera_connection.py  image_detection.py  image_processing.py
web/watchdogs/: db.sqlite3  manage.py
web/watchdogs/clubs/: admin.py  models.py  urls.py  views.py
web/watchdogs/clubs/migrations/: 0001_initial.py
web/watchdogs/clubs/static/clubs/css/: styles.css
web/watchdogs/clubs/templates/clubs/: base.html  club.html  index.html
web/watchdogs/watchdogs/: asgi.py  settings.py  urls.py  wsgi.py
