[tool.poetry]
name = "watchdogs"
version = "0.1.0"
description = ""
authors = ["vallome <vallome@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^3.17.0"
django = "^4.2.5"
pillow = "^10.0.0"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
